
[workspace]
members = [
  "2022-11-18/aes_gcm_keygen",
  "2022-11-18/vigenere",
  "2022-11-25/aes_utils",
  "2022-11-25/des_utils",
  "2022-12-02/sha512n",
  "2022-12-02/hash_fns",
  "2022-12-16/ed25519_signer",
  "2022-12-16/zeroize_bug",
  "2023-01-06/gen_sized_array",
  "2023-01-13/is_prime",
  "2023-01-13/eea",
  "2023-01-13/miller_rabin",
  "2023-02-03/generators",
]